[package]
name = "ring"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-sdk-dynamodb = "1.103.0"
cdrs-tokio = "9.0.0"
chrono = "0.4.43"
env_logger = "0.11.8"
log = "0.4.29"
mongodb = "3.5.0"
tiberius = "0.12.3"
tokio = {version="1.49.0", features=["full"]}
tokio-postgres = "0.7.16"
tokio-util = {version="0.7.18", features=["compat"]}